@@ -5,9 +5,8 @@ use warnings;
 use File::Map qw/:map lock_map sync/;
 use IO::Handle;
 use Test::More tests => 9;
-use Test::Warn;
+use Test::Warnings qw/warning/;
 use Test::Exception;
-use Test::NoWarnings;
 
 open my $fh, '+<:raw', undef;
 
@@ -26,5 +25,5 @@ lives_ok { sync $mmaped } "can fake syncing empty file";
 	my $mmaped2;
 	lives_ok { map_handle $mmaped2, $fh, '>' } "Can't map empty file writably";
 
-	warnings_like { substr $mmaped2, 0, 0, "1" } qr/^Can't overwrite an empty map at /, 'Shouldn\'t assign to empty map';
+	like(warning { substr $mmaped2, 0, 0, "1" }, qr/^Can't overwrite an empty map at /, 'Shouldn\'t assign to empty map');
 }
