@@ -6,9 +6,8 @@ use warnings;
 use File::Map qw/:map lock_map sync advise/;
 use IO::Socket::INET;
 use Test::More tests => 27;
-use Test::Warn;
+use Test::Warnings qw/warning warnings/;
 use Test::Exception;
-use Test::NoWarnings;
 use if $^O ne 'MSWin32', POSIX => qw/setlocale LC_ALL/;
 
 setlocale(&LC_ALL, 'C') if $^O ne 'MSWin32';
@@ -23,22 +22,24 @@ substr $mmaped, 0, length $mmaped, $slurped;
 
 is $mmaped, $slurped, '$slurped an $mmaped are equal';
 
-warning_like { $mmaped = reverse $mmaped } qr/^Writing directly to a memory mapped file is not recommended at /, 'Reversing should give a warning';
+like(warning { $mmaped = reverse $mmaped }, qr/^Writing directly to a memory mapped file is not recommended at /, 'Reversing should give a warning');
 
 is($mmaped, scalar reverse($slurped), '$mmap is reversed');
 
 {
 	no warnings 'substr';
-	warning_like { $mmaped = reverse $mmaped } undef, 'Reversing shouldn\'t give a warning when substr warnings are disabled';
+	is(warnings { $mmaped = reverse $mmaped }, 0, 'Reversing shouldn\'t give a warning when substr warnings are disabled');
 }
 
-warning_is { $mmaped = $mmaped } undef, 'No warnings on self-assignment';
+is(warnings { $mmaped = $mmaped }, 0, 'No warnings on self-assignment');
 
 dies_ok { map_file my $var, 'some-nonexistant-file' } 'Can\'t map non-existant files as readonly';
 
-warnings_like { $mmaped =~ s/(.)/$1$1/ } [ qr/^Writing directly to a memory mapped file is not recommended at /, qr/^Truncating new value to size of the memory map at /], 'Trying to make it longer gives warnings';
+my @warnings = warnings { $mmaped =~ s/(.)/$1$1/ };
+s/ at .*$//s for @warnings;
+is_deeply(\@warnings, [ 'Writing directly to a memory mapped file is not recommended', 'Truncating new value to size of the memory map'], 'Trying to make it longer gives warnings');
 
-warning_is { $slurped =~ tr/r/t/ } undef, 'Translation shouldn\'t cause warnings';
+is(warnings { $slurped =~ tr/r/t/ }, 0, 'Translation shouldn\'t cause warnings');
 
 throws_ok { sync my $foo } qr/^Could not sync: this variable is not memory mapped at /, 'Can\'t sync normal variables';
 
@@ -55,18 +56,18 @@ SKIP: {
 	throws_ok { map_handle my $foo, $bound } qr/^Could not map:/, 'Can\'t map STDOUT';
 }
 
-warning_is { advise $mmaped, 'sequential' } undef, 'advice $mmaped, \'readahead\'';
-warning_like { advise $mmaped, 'non-existent' } qr/^Unknown advice 'non-existent' at /, 'advice $mmaped, \'non-existent\'';
+is(warnings { advise $mmaped, 'sequential' }, 0, 'advice $mmaped, \'readahead\'');
+like(warning { advise $mmaped, 'non-existent' }, qr/^Unknown advice 'non-existent' at /, 'advice $mmaped, \'non-existent\'');
 
-warning_like { $mmaped = "foo" } qr/^Writing directly to a memory mapped file is not recommended at /, 'Trying to make it shorter gives a warning';
+like(warning { $mmaped = "foo" }, qr/^Writing directly to a memory mapped file is not recommended at /, 'Trying to make it shorter gives a warning');
 
 is(length $mmaped, length $slurped, '$mmaped and $slurped still have the same length');
 
-warning_like { $mmaped = 1 } qr/^Writing directly to a memory mapped file is not recommended at /, 'Cutting should give a warning for numbers too';
+like(warning { $mmaped = 1 }, qr/^Writing directly to a memory mapped file is not recommended at /, 'Cutting should give a warning for numbers too');
 
 throws_ok { map_file my $str, $0, '<', -1, 100; $str =~ tr/a// } qr/^Window \(-?\d+,-?\d+\) is outside the file /, 'negative offsets give an error';
 
-warnings_like { undef $mmaped } [ qr/^Writing directly to a memory mapped file is not recommended at/ ], 'Survives undefing';
+like(warning { undef $mmaped }, qr/^Writing directly to a memory mapped file is not recommended at/, 'Survives undefing');
 
 map_anonymous our $local, 1024;
 
